[gd_scene load_steps=80 format=3 uid="uid://bsp0h6x4sa6w3"]

[ext_resource type="PackedScene" uid="uid://rn0vmqxk6m2u" path="res://scenes/ingame_ui.tscn" id="1_1702c"]
[ext_resource type="PackedScene" uid="uid://cvlgc2otxhfp0" path="res://scenes/pause_menu.tscn" id="2_y66yi"]
[ext_resource type="PackedScene" uid="uid://dc1u6lbglt1sa" path="res://scenes/level_start_menu.tscn" id="3_8degd"]
[ext_resource type="PackedScene" uid="uid://cfsbgkp7pgb4y" path="res://scenes/level_finish_menu.tscn" id="3_ihhod"]
[ext_resource type="Script" uid="uid://xyjkgwsvi77o" path="res://scripts/level_data.gd" id="4_6kyq2"]
[ext_resource type="Script" uid="uid://ch7pe31yvd7f2" path="res://scripts/task_data.gd" id="5_eeokw"]
[ext_resource type="Texture2D" uid="uid://bhyj17jhyj7xa" path="res://assets/sprites/lvl_room/Room - Walls - 1.png" id="6_nlhum"]
[ext_resource type="PackedScene" uid="uid://co1pxrnjscwd0" path="res://scenes/player.tscn" id="7_oimbs"]
[ext_resource type="Texture2D" uid="uid://b4vlis8hw5des" path="res://assets/sprites/lvl_room/Room - Nightstand - 1.png" id="8_iw3bm"]
[ext_resource type="PackedScene" uid="uid://cocn3nc3mwbvg" path="res://scenes/landing_collision.tscn" id="8_utfl4"]
[ext_resource type="Script" uid="uid://ctt0lym4c002t" path="res://scripts/interactable_sprite.gd" id="9_xkqgr"]
[ext_resource type="Texture2D" uid="uid://dcmvcs5mo5ski" path="res://assets/sprites/lvl1/Lamp On.png" id="10_1hqne"]
[ext_resource type="Texture2D" uid="uid://bcqwg6kjbk4e" path="res://assets/sprites/lvl_room/Room - CatBed - 1.png" id="10_iw3bm"]
[ext_resource type="Script" uid="uid://cdgbl8e0ph2uw" path="res://scripts/interactable_scratch.gd" id="11_3k8cb"]
[ext_resource type="Texture2D" uid="uid://pfcloy0hhypg" path="res://assets/sprites/lvl_room/Room - Cat tree - 1.png" id="11_70ugw"]
[ext_resource type="Texture2D" uid="uid://d17o8pssqb6sh" path="res://assets/sprites/lvl_room/Room - Table - 1.png" id="12_06jot"]
[ext_resource type="Texture2D" uid="uid://dxvb7lpmdi7dl" path="res://assets/sprites/lvl_room/Room - Cat tree 2 - 1.png" id="12_kmwl1"]
[ext_resource type="Texture2D" uid="uid://bk5lc6nk6vnn0" path="res://assets/sprites/lvl_room/Room - Lamp - 1.png" id="13_dmq8d"]
[ext_resource type="Texture2D" uid="uid://d0mmyba8777qk" path="res://assets/sprites/lvl1/FlowerPot.png" id="17_twhj1"]
[ext_resource type="Texture2D" uid="uid://bofoio1qbs1tg" path="res://assets/sprites/lvl1/door.png" id="20_8ihoc"]
[ext_resource type="FontFile" uid="uid://deukbkugbjex6" path="res://assets/fonts/PixelOperator8.ttf" id="21_6kyq2"]
[ext_resource type="Script" uid="uid://cnkvtcitd4nb3" path="res://scripts/door.gd" id="21_b6gd8"]
[ext_resource type="Script" uid="uid://dr8veymk5832e" path="res://scripts/level_animator.gd" id="22_ou5cf"]
[ext_resource type="AudioStream" uid="uid://d377s8jicb3k" path="res://assets/audio/door_open.mp3" id="23_16d68"]
[ext_resource type="Texture2D" uid="uid://pijyodsliqci" path="res://assets/sprites/lvl_room/Room - Label 1 - 1.png" id="23_ihhod"]
[ext_resource type="Texture2D" uid="uid://b6h4pepxpp2k8" path="res://assets/sprites/lvl_room/Room - Label 2 - 1.png" id="24_6kyq2"]
[ext_resource type="Texture2D" uid="uid://b71qy4ushsdj6" path="res://assets/sprites/lvl_room/Room - Message tooltip - 1.png" id="25_8degd"]
[ext_resource type="Texture2D" uid="uid://cfa0o3wc52y5l" path="res://assets/sprites/lvl_room/Room - Label 3 - 1.png" id="25_eeokw"]
[ext_resource type="Texture2D" uid="uid://bnh45up8ifb7n" path="res://assets/sprites/lvl_room/Room - Window - 1.png" id="29_oimbs"]

[sub_resource type="Resource" id="Resource_vl02w"]
script = ExtResource("5_eeokw")
interactables_to_complete = Array[NodePath]([NodePath("../Interactables/FlowerPot")])
task_ui_text = "Conquer shiny thingy"
metadata/_custom_type_script = "uid://ch7pe31yvd7f2"

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_uwrxv"]
distance = -11.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_yqjtg"]
normal = Vector2(1, 0)
distance = -144.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_lnu2h"]
normal = Vector2(-1, 0)
distance = -681.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_70ugw"]
size = Vector2(26, 27)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dmq8d"]
size = Vector2(26, 3)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_06jot"]
radius = 8.0
height = 16.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_06jot"]
size = Vector2(8.75, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x5mx3"]
size = Vector2(25, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_grp0m"]
size = Vector2(10.75, 1.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1702c"]
size = Vector2(10, 1.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eeokw"]
size = Vector2(44, 27)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8degd"]
size = Vector2(42.375, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y66yi"]
size = Vector2(10, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ihhod"]
size = Vector2(10, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6kyq2"]
size = Vector2(11, 3)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_kvpfn"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lbhrr"]
radius = 3.0
height = 18.0

[sub_resource type="AtlasTexture" id="AtlasTexture_cpkqi"]
atlas = ExtResource("17_twhj1")
region = Rect2(26, 0, 26, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tpdyh"]
atlas = ExtResource("17_twhj1")
region = Rect2(0, 0, 26, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sx06d"]
atlas = ExtResource("17_twhj1")
region = Rect2(26, 0, 26, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ufetx"]
atlas = ExtResource("17_twhj1")
region = Rect2(0, 32, 26, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjqds"]
atlas = ExtResource("17_twhj1")
region = Rect2(26, 32, 26, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0a4n"]
atlas = ExtResource("17_twhj1")
region = Rect2(0, 0, 26, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_grp0m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cpkqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tpdyh")
}],
"loop": false,
"name": &"1",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sx06d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ufetx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjqds")
}],
"loop": false,
"name": &"2",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0a4n")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1702c"]
radius = 5.99942
height = 11.998863

[sub_resource type="AtlasTexture" id="AtlasTexture_l2y8u"]
atlas = ExtResource("20_8ihoc")
region = Rect2(0, 0, 36, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8nnd"]
atlas = ExtResource("20_8ihoc")
region = Rect2(0, 0, 36, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdlxk"]
atlas = ExtResource("20_8ihoc")
region = Rect2(0, 0, 36, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhitu"]
atlas = ExtResource("20_8ihoc")
region = Rect2(36, 0, 36, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_kes6e"]
atlas = ExtResource("20_8ihoc")
region = Rect2(72, 0, 36, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_alemc"]
atlas = ExtResource("20_8ihoc")
region = Rect2(108, 0, 36, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2dfw"]
atlas = ExtResource("20_8ihoc")
region = Rect2(0, 77, 36, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqhkw"]
atlas = ExtResource("20_8ihoc")
region = Rect2(0, 77, 36, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_0adkv"]
atlas = ExtResource("20_8ihoc")
region = Rect2(0, 0, 36, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_fx5i6"]
atlas = ExtResource("20_8ihoc")
region = Rect2(0, 0, 36, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_5sva8"]
atlas = ExtResource("20_8ihoc")
region = Rect2(0, 77, 36, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2h7q"]
atlas = ExtResource("20_8ihoc")
region = Rect2(0, 77, 36, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_ok8wf"]
atlas = ExtResource("20_8ihoc")
region = Rect2(36, 77, 36, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_5r266"]
atlas = ExtResource("20_8ihoc")
region = Rect2(72, 77, 36, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_a68ly"]
atlas = ExtResource("20_8ihoc")
region = Rect2(108, 77, 36, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ypuy"]
atlas = ExtResource("20_8ihoc")
region = Rect2(0, 154, 36, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_lc6v1"]
atlas = ExtResource("20_8ihoc")
region = Rect2(36, 154, 36, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_eeokw"]
atlas = ExtResource("20_8ihoc")
region = Rect2(36, 154, 36, 77)

[sub_resource type="SpriteFrames" id="SpriteFrames_cpkqi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2y8u")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8nnd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdlxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhitu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kes6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_alemc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2dfw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqhkw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0adkv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fx5i6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5sva8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2h7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ok8wf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5r266")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a68ly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ypuy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lc6v1")
}],
"loop": false,
"name": &"open",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eeokw")
}],
"loop": true,
"name": &"opened",
"speed": 5.0
}]

[sub_resource type="Theme" id="Theme_6kyq2"]
default_font = ExtResource("21_6kyq2")
default_font_size = 8

[sub_resource type="Animation" id="Animation_tpdyh"]
length = 0.001

[sub_resource type="Animation" id="Animation_gtj14"]
resource_name = "timer_out"
length = 5.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LevelAnimator/AudioStreamPlayer2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_ihhod"]
resource_name = "level_start"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LevelAnimator")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.06666667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"level_start"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fk3q0"]
_data = {
&"RESET": SubResource("Animation_tpdyh"),
&"level_start": SubResource("Animation_ihhod"),
&"timer_out": SubResource("Animation_gtj14")
}

[node name="Lvl0" type="Node2D"]

[node name="IngameUI" parent="." instance=ExtResource("1_1702c")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("2_y66yi")]

[node name="LevelStartMenu" parent="CanvasLayer" instance=ExtResource("3_8degd")]

[node name="LevelFinishMenu" parent="CanvasLayer" instance=ExtResource("3_ihhod")]

[node name="LevelData" type="Node" parent="."]
script = ExtResource("4_6kyq2")
owners_messages = Array[String](["We'll be back in 15 min", "Hope you will be a good boy!
Bye!"])
messages_timeout = Array[int]([2, 2])
tasks = Array[ExtResource("5_eeokw")]([SubResource("Resource_vl02w")])
timer_limit_seconds = 900

[node name="RoomBG" type="Sprite2D" parent="."]
position = Vector2(206, 20)
texture = ExtResource("6_nlhum")

[node name="Player" parent="." instance=ExtResource("7_oimbs")]
position = Vector2(-90, 57)

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(-1, -36)
zoom = Vector2(8, 8)
process_callback = 0
limit_left = -144
limit_top = -57
limit_right = 230
limit_bottom = 78
position_smoothing_enabled = true
position_smoothing_speed = 3.0

[node name="World Boundaries" type="StaticBody2D" parent="."]
position = Vector2(0, 59)

[node name="CollisionBottom" type="CollisionShape2D" parent="World Boundaries"]
position = Vector2(0, -9)
shape = SubResource("WorldBoundaryShape2D_uwrxv")

[node name="CollisionLeft" type="CollisionShape2D" parent="World Boundaries"]
shape = SubResource("WorldBoundaryShape2D_yqjtg")

[node name="CollisionRight" type="CollisionShape2D" parent="World Boundaries"]
position = Vector2(-452, -3)
shape = SubResource("WorldBoundaryShape2D_lnu2h")

[node name="Surfaces" type="Node2D" parent="."]

[node name="Nightstand" type="StaticBody2D" parent="Surfaces"]
position = Vector2(-40, 49)

[node name="Sprite2D" type="Sprite2D" parent="Surfaces/Nightstand"]
texture = ExtResource("8_iw3bm")

[node name="Landing5" parent="Surfaces/Nightstand" instance=ExtResource("8_utfl4")]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Surfaces/Nightstand/Landing5"]
position = Vector2(0, -23)
shape = SubResource("RectangleShape2D_70ugw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Surfaces/Nightstand"]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_dmq8d")
one_way_collision = true

[node name="CatBed" type="StaticBody2D" parent="Surfaces"]
position = Vector2(-68, 56)

[node name="Sprite2D2" type="Sprite2D" parent="Surfaces/CatBed"]
texture = ExtResource("10_iw3bm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Surfaces/CatBed"]
position = Vector2(0, 9)
shape = SubResource("CapsuleShape2D_06jot")
one_way_collision = true

[node name="CatTree" type="Node2D" parent="Surfaces"]
position = Vector2(11, 37)

[node name="Sprite2D" type="Sprite2D" parent="Surfaces/CatTree"]
texture = ExtResource("11_70ugw")

[node name="lvl1" type="StaticBody2D" parent="Surfaces/CatTree"]
position = Vector2(-7, 11)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Surfaces/CatTree/lvl1"]
position = Vector2(0.625, 0)
shape = SubResource("RectangleShape2D_06jot")
one_way_collision = true

[node name="lvl2" type="StaticBody2D" parent="Surfaces/CatTree"]
position = Vector2(15, -3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Surfaces/CatTree/lvl2"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_x5mx3")
one_way_collision = true

[node name="lvl3" type="StaticBody2D" parent="Surfaces/CatTree"]
position = Vector2(-24, -10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Surfaces/CatTree/lvl3"]
position = Vector2(0.375, 0)
shape = SubResource("RectangleShape2D_grp0m")
one_way_collision = true

[node name="lvl4" type="StaticBody2D" parent="Surfaces/CatTree"]
position = Vector2(8, -22)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Surfaces/CatTree/lvl4"]
shape = SubResource("RectangleShape2D_1702c")
one_way_collision = true

[node name="Table" type="StaticBody2D" parent="Surfaces"]
position = Vector2(193, 44)

[node name="Sprite2D" type="Sprite2D" parent="Surfaces/Table"]
texture = ExtResource("12_06jot")

[node name="Landing" parent="Surfaces/Table" instance=ExtResource("8_utfl4")]
position = Vector2(1, -24)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Surfaces/Table/Landing"]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_eeokw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Surfaces/Table"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_8degd")
one_way_collision = true

[node name="CatTree2" type="Node2D" parent="Surfaces"]
position = Vector2(134, 41)

[node name="Sprite2D" type="Sprite2D" parent="Surfaces/CatTree2"]
texture = ExtResource("12_kmwl1")

[node name="lvl1" type="StaticBody2D" parent="Surfaces/CatTree2"]
position = Vector2(1, 7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Surfaces/CatTree2/lvl1"]
shape = SubResource("RectangleShape2D_y66yi")
one_way_collision = true

[node name="lvl2" type="StaticBody2D" parent="Surfaces/CatTree2"]
position = Vector2(-16, -6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Surfaces/CatTree2/lvl2"]
shape = SubResource("RectangleShape2D_ihhod")
one_way_collision = true

[node name="lvl3" type="StaticBody2D" parent="Surfaces/CatTree2"]
position = Vector2(16, -18)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Surfaces/CatTree2/lvl3"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_6kyq2")
one_way_collision = true

[node name="FloorLanding" parent="." instance=ExtResource("8_utfl4")]
position = Vector2(250, 27)

[node name="CollisionShape2D" type="CollisionShape2D" parent="FloorLanding"]
shape = SubResource("WorldBoundaryShape2D_kvpfn")

[node name="Interactables" type="Node" parent="."]

[node name="LampSwitch" type="Area2D" parent="Interactables" node_paths=PackedStringArray("target_sprite")]
position = Vector2(53, 32)
collision_layer = 4
collision_mask = 0
script = ExtResource("9_xkqgr")
target_sprite = NodePath("LampLight")

[node name="Lamp" type="Sprite2D" parent="Interactables/LampSwitch"]
texture = ExtResource("13_dmq8d")

[node name="LampLight" type="Sprite2D" parent="Interactables/LampSwitch"]
visible = false
position = Vector2(0, -21)
texture = ExtResource("10_1hqne")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactables/LampSwitch"]
position = Vector2(-10, -11)
shape = SubResource("CapsuleShape2D_lbhrr")

[node name="FlowerPot" type="Area2D" parent="Interactables" node_paths=PackedStringArray("target_sprites")]
position = Vector2(191, 22)
collision_layer = 4
collision_mask = 0
script = ExtResource("11_3k8cb")
target_sprites = NodePath("FlowerPotSprite")
animations_count = 2

[node name="FlowerPotSprite" type="AnimatedSprite2D" parent="Interactables/FlowerPot"]
process_mode = 3
position = Vector2(10, 0)
sprite_frames = SubResource("SpriteFrames_grp0m")
animation = &"idle"
autoplay = "idle"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactables/FlowerPot"]
position = Vector2(1.9999995, -10.999999)
rotation = 0.013788337
shape = SubResource("CapsuleShape2D_1702c")

[node name="Tips" type="Node" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Tips"]
position = Vector2(-35, -27)
texture = ExtResource("23_ihhod")

[node name="Sprite2D2" type="Sprite2D" parent="Tips"]
position = Vector2(-35, -14)
texture = ExtResource("24_6kyq2")

[node name="Sprite2D3" type="Sprite2D" parent="Tips"]
position = Vector2(153, -11)
texture = ExtResource("25_eeokw")

[node name="Door" type="AnimatedSprite2D" parent="."]
position = Vector2(-120, 25)
sprite_frames = SubResource("SpriteFrames_cpkqi")
animation = &"idle"
autoplay = "idle"
script = ExtResource("21_b6gd8")

[node name="OwnersMessage" type="Node2D" parent="Door"]
position = Vector2(109, -41)

[node name="OwnersMessageText" type="Label" parent="Door/OwnersMessage"]
z_index = 100
offset_left = -95.0
offset_top = -20.0
offset_right = 95.0
offset_bottom = 20.0
theme = SubResource("Theme_6kyq2")
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="Cloud" type="Sprite2D" parent="Door/OwnersMessage"]
visible = false
z_index = 90
scale = Vector2(0.9, 1)
texture = ExtResource("25_8degd")

[node name="LevelAnimator" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_fk3q0")
}
script = ExtResource("22_ou5cf")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="LevelAnimator"]
stream = ExtResource("23_16d68")
volume_db = -5.0
bus = &"SFX"

[node name="Window" type="Sprite2D" parent="."]
position = Vector2(63, -3)
texture = ExtResource("29_oimbs")

[connection signal="area_shape_entered" from="Interactables/FlowerPot" to="Interactables/FlowerPot" method="_on_area_shape_entered"]
[connection signal="area_shape_exited" from="Interactables/FlowerPot" to="Interactables/FlowerPot" method="_on_area_shape_exited"]

[editable path="Surfaces/Nightstand/Landing5"]
[editable path="FloorLanding"]
